--- a/PA7/Assignment7/CMakeLists.txt
+++ b/PA7/Assignment7/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(RayTracing main.cpp Object.hpp Vector.cpp Vector.hpp Sphere.hpp global.hpp Triangle.hpp Scene.cpp
         Scene.hpp Light.hpp AreaLight.hpp BVH.cpp BVH.hpp Bounds3.hpp Ray.hpp Material.hpp Intersection.hpp
         Renderer.cpp Renderer.hpp)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")
